# WeedManagement

./: COMMIT.bat  COMMIT.sh  COMMIT_WIN.bat  DOWNLOADER.sh  LOADER.sh  Probability_Intro.m  README.md  claccTest.py  temp  test.py  thorvald.rviz
WORKSPACE/catkin_ws/src/assessment_package/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml  python_file.py
WORKSPACE/catkin_ws/src/assessment_package/config/: navigation_targets.yaml  planners.yaml  system_config.yaml
WORKSPACE/catkin_ws/src/assessment_package/docs/: ARCHITECTURE.md  ISSUES AND DESIGN FLAWS.md  README.md  SETUP AND INSTALLATION.md  TODO.md
WORKSPACE/catkin_ws/src/assessment_package/launch/: detector.launch  detectors.launch  hunter.launch  killer.launch  logger.launch  move_base.launch  move_base_robot.launch  navigator.launch  plant_detectors.launch  setup.launch  setup2.launch  sprayer.launch  thorvald-sim.launch  thorvald_001.launch  thorvald_002.launch  weed_detector.launch  weed_tracker.launch
WORKSPACE/catkin_ws/src/assessment_package/launch/SCRAP/: basil_detector.launch  cabbage_detector.launch  old_setup2.launch  weed_detector.launch
WORKSPACE/catkin_ws/src/assessment_package/msg/: WeedList.msg  weed_location.msg
WORKSPACE/catkin_ws/src/assessment_package/scripts/: basil_detector.py  detector.py  hunter.py  killer.py  navigator.py  python_file.py  runner.py  sprayer.py  tf_testing.py  weed_detector.py  weed_killer.py  weed_logger.py  weed_tracker.py
WORKSPACE/catkin_ws/src/assessment_package/scripts/SCRAP/: basil_detector.py  cabbage_detector.py  python_file.py  set_topo_nav_goal.py  (+1 more)
(+99 files in other folders)
